@@ -83,6 +83,15 @@ name|java
 operator|.
 name|util
 operator|.
+name|Random
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Set
 import|;
 end_import
@@ -496,36 +505,6 @@ name|spatial3d
 operator|.
 name|geom
 operator|.
-name|XYZSolid
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|spatial3d
-operator|.
-name|geom
-operator|.
-name|XYZSolidFactory
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|spatial3d
-operator|.
-name|geom
-operator|.
 name|GeoArea
 import|;
 end_import
@@ -722,6 +701,36 @@ operator|.
 name|geom
 operator|.
 name|XYZBounds
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|spatial3d
+operator|.
+name|geom
+operator|.
+name|XYZSolid
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|spatial3d
+operator|.
+name|geom
+operator|.
+name|XYZSolidFactory
 import|;
 end_import
 begin_import
@@ -7701,6 +7710,256 @@ operator|.
 name|z
 argument_list|)
 expr_stmt|;
+block|}
+block|}
+block|}
+comment|// poached from TestGeoEncodingUtils.testLatitudeQuantization:
+comment|/**    * step through some integers, ensuring they decode to their expected double values.    * double values start at -90 and increase by LATITUDE_DECODE for each integer.    * check edge cases within the double range and random doubles within the range too.    */
+DECL|method|testQuantization
+specifier|public
+name|void
+name|testQuantization
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Random
+name|random
+init|=
+name|random
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|10000
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|int
+name|encoded
+init|=
+name|random
+operator|.
+name|nextInt
+argument_list|()
+decl_stmt|;
+name|double
+name|min
+init|=
+name|encoded
+operator|*
+name|Geo3DUtil
+operator|.
+name|DECODE
+decl_stmt|;
+name|double
+name|decoded
+init|=
+name|Geo3DUtil
+operator|.
+name|decodeValueFloor
+argument_list|(
+name|encoded
+argument_list|)
+decl_stmt|;
+comment|// should exactly equal expected value
+name|assertEquals
+argument_list|(
+name|min
+argument_list|,
+name|decoded
+argument_list|,
+literal|0.0D
+argument_list|)
+expr_stmt|;
+comment|// should round-trip
+name|assertEquals
+argument_list|(
+name|encoded
+argument_list|,
+name|Geo3DUtil
+operator|.
+name|encodeValue
+argument_list|(
+name|decoded
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// test within the range
+if|if
+condition|(
+name|encoded
+operator|!=
+name|Integer
+operator|.
+name|MAX_VALUE
+condition|)
+block|{
+comment|// this is the next representable value
+comment|// all double values between [min .. max) should encode to the current integer
+comment|// all double values between (min .. max] should encodeCeil to the next integer.
+name|double
+name|max
+init|=
+name|min
+operator|+
+name|Geo3DUtil
+operator|.
+name|DECODE
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|max
+argument_list|,
+name|Geo3DUtil
+operator|.
+name|decodeValueFloor
+argument_list|(
+name|encoded
+operator|+
+literal|1
+argument_list|)
+argument_list|,
+literal|0.0D
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|encoded
+operator|+
+literal|1
+argument_list|,
+name|Geo3DUtil
+operator|.
+name|encodeValue
+argument_list|(
+name|max
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// first and last doubles in range that will be quantized
+name|double
+name|minEdge
+init|=
+name|Math
+operator|.
+name|nextUp
+argument_list|(
+name|min
+argument_list|)
+decl_stmt|;
+name|double
+name|maxEdge
+init|=
+name|Math
+operator|.
+name|nextDown
+argument_list|(
+name|max
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|encoded
+argument_list|,
+name|Geo3DUtil
+operator|.
+name|encodeValue
+argument_list|(
+name|minEdge
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|encoded
+argument_list|,
+name|Geo3DUtil
+operator|.
+name|encodeValue
+argument_list|(
+name|maxEdge
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// check random values within the double range
+name|long
+name|minBits
+init|=
+name|NumericUtils
+operator|.
+name|doubleToSortableLong
+argument_list|(
+name|minEdge
+argument_list|)
+decl_stmt|;
+name|long
+name|maxBits
+init|=
+name|NumericUtils
+operator|.
+name|doubleToSortableLong
+argument_list|(
+name|maxEdge
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|int
+name|j
+init|=
+literal|0
+init|;
+name|j
+operator|<
+literal|100
+condition|;
+name|j
+operator|++
+control|)
+block|{
+name|double
+name|value
+init|=
+name|NumericUtils
+operator|.
+name|sortableLongToDouble
+argument_list|(
+name|TestUtil
+operator|.
+name|nextLong
+argument_list|(
+name|random
+argument_list|,
+name|minBits
+argument_list|,
+name|maxBits
+argument_list|)
+argument_list|)
+decl_stmt|;
+comment|// round down
+name|assertEquals
+argument_list|(
+name|encoded
+argument_list|,
+name|Geo3DUtil
+operator|.
+name|encodeValue
+argument_list|(
+name|value
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 block|}
